app/Resources/assets/sass/home.scss
@import '~include-media/dist/_include-media.scss';
@import './intro';
@import './variables';

body {
  height: auto;
}

.header {
  position: fixed;
  width: 100%;
  z-index: 3;
}

.footer {
  position: fixed;
  width: 100%;
  bottom: 0;
  z-index: 2;
}

.button {
  display: inline-block;
  padding: 0 25px 0 10px;
  line-height: 35px;
  font-size: 12px;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 1.4px;
  border: 1px transparent solid;
  background-repeat: no-repeat;
  background-position: calc(100% - 10px) center;
  &.black {
    color: #000000;
    border-color: #000000;
    background-image: url('../img/button-arrow-right-black.png');
  }
  &.yellow {
    color: $roche-yellow;
    border-color: $roche-yellow;
    background-image: url('../img/button-arrow-right-yellow.png');
  }
}

section {
  width: 200%;
  z-index: 2;
  article {
    position: relative;
    display: flex;
    width: 50%;
    height: 100vh;
    align-items: center;
    opacity: 0;
    z-index: 1;
    &.article-1 {
      justify-content: space-between;
    }
    &.article-2 {
      margin-top: 100px;
    }
    &.article-3 {
      margin-top: -400px;
    }
    &.article-4 {
      margin-top: -200px;
    }
    &.article-5 {
      margin-top: -100px;
    }
    &.article-6 {
      margin-top: 800px;
    }
    &.align-left {
      .box {
        margin-left: 40px;
        em,
        strong,
        .button {
          margin-left: 80px;
        }
      }
    }
    &.align-right {
      justify-content: flex-end;
      .box {
        margin-right: 40px;
        text-align: right;
        em,
        strong,
        .button {
          margin-right: 80px;
        }
      }
    }
    &.right {
      margin-left: 50%;
    }
    .box {
      color: $roche-yellow;
      br {
        display: none;
      }
      h2 {
        font-size: 31px;
        font-weight: 100;
        text-transform: uppercase;
        margin-bottom: 55px;
        letter-spacing: 1px;
        small {
          display: block;
          font-size: 23px;
        }
      }
      em {
        display: block;
        margin-left: 80px;
        font-family: 'Playfair Display', serif;
        font-size: 19px;
        font-style: italic;
        font-weight: 100;
        line-height: 25px;
        letter-spacing: 0.2px;
      }
      strong {
        display: block;
        margin: 40px 40px 40px 0;
        font-size: 12px;
        text-transform: uppercase;
        text-align: right;
        letter-spacing: 1.4px;
      }
    }
    .scroll-down {
      position: absolute;
      bottom: 80px;
      left: 50%;
      margin-left: -84px;
      img {
        animation: bounce 4s ease infinite;
      }
    }
    .nouveautes {
      width: 25%;
      margin-right: 40px;
      overflow: hidden;
      h2 {
        margin-bottom: 20px;
        font-size: 20px;
        font-weight: 100;
        color: $roche-yellow;
        text-transform: uppercase;
        letter-spacing: 1.6px;
      }
      i {
        display: block;
        margin-bottom: 20px;
        font-family: 'Playfair Display', serif;
        font-size: 18px;
        font-style: italic;
        line-height: 23px;
      }
      .text {
        position: relative;
        padding: 20px;
        margin-bottom: -18px;
        font-size: 13px;
        font-style: italic;
        line-height: 16px;
        border: 1px #000000 solid;
        border-bottom: none;
      }
      .button {
        position: relative;
        float: right;
        margin-right: 20px;
        &:after,
        &:before {
          content: '';
          position: absolute;
          width: 100vw;
          bottom: 18px;
          border-bottom: 1px #000000 solid;
        }
        &:before {
          right: 100%;
        }
        &:after {
          left: 100%;
        }
      }
    }
  }
}

.swipe-background {
  position: absolute;
  width: 200%;
  height: 100%;
  background-image: url('../img/background-home-desktop.jpg');
  background-size: 100% 100%;
  z-index: 0;
  @include media('<large') {
    background-image: url('../img/background-home-mobile.jpg');
  }
}

.overlay-begin {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-image: url('../img/overlay-begin.png');
  opacity: 0.8;
  z-index: 1;
}

@keyframes bounce {
  from { opacity: 1; }
  50%  { opacity: 0.2; }
  to   { opacity: 1; }
}

